# saasexpress

./: .gitignore  Cargo.toml  README.md
.devops/: DESIGN.md  Dockerfile
admin-api/: .gitignore  Dockerfile  Makefile  api.yaml  go.mod  go.sum  main.go
admin-api-rs/: Cargo.toml  Dockerfile  Makefile  README.md  diesel.toml
bootstrap/: fanout.yaml  services-api-get.yaml  tenant-ui.yaml  ws-1.yaml  ws-2.yaml
examples/: anthropic.yaml  callout.yaml  faker.yaml  oidc.yaml  shell.yaml  vault.yaml  websocket.yaml
saasexpress-canodamo/: PROMPTS.md  oidc.rs
saasexpress-core/: Cargo.toml
saasexpress-core/src/: broker.rs  control_bus.rs  lib.rs  my_reg.rs  random.rs  shared_resource.rs  timestamp.rs
saasexpress-core/src/graph/: experimental.rs  graph.rs  graph_run.rs  hooks.rs  message.rs  meta.rs  mod.rs  operator.rs  registry.rs  serde.rs  watcher.rs
saasexpress-core/src/graph/operator_types/: ai_agent.rs  ai_tool.rs  canonical_model.rs  mod.rs
saasexpress-core/src/graph/processors/: basic.rs  mod.rs  port.rs
saasexpress-core/src/operators/: buffer_to_json.rs  callout.rs  canodamo_sample.rs  factory.rs  json_to_buffer.rs  mod.rs  noop.rs  op_actor.rs  op_actor_handle.rs  op_wrapper.rs  passthrough.rs  settings.rs  stub.rs  template.rs  terminate.rs  timer.rs
saasexpress-core/src/operators/ai_agent/: mod.rs  model.rs
saasexpress-core/src/operators/ai_tool/: mod.rs
saasexpress-core/src/operators/claim_check/: check_fs.rs  claim_check.rs  mod.rs  model.rs
saasexpress-core/src/operators/fan_out/: fan_out.rs
saasexpress-core/src/operators/global_space/: global_space.rs  mod.rs  resource.rs
saasexpress-core/src/operators/shell/: actor.rs  mod.rs  process.rs  resources.rs  shell.rs
saasexpress-core/src/settings/: settings.rs
saasexpress-kube/: Cargo.toml
saasexpress-kube/src/: main.rs  make.rs
saasexpress-tenants/: .gitignore  Cargo.toml
saasexpress-tenants/src/: bootstrap.rs  lib.rs  main.rs  static_handler.rs
saasexpress-tenants/src/api/: activity_handler.rs  mod.rs  service_handler.rs  tenant_handler.rs
saasexpress-tenants/src/bootstrap/: activity-api-get.yaml  activity-api-mutation.yaml  ai-chatgpt.yaml  ai-claude.yaml  callout.yaml  health.yaml  services-api-get.yaml  services-api-mutation.yaml  shell.yaml  tenant-api-mutation.yaml  tenant-ui.yaml  timer-schedule.yaml  timer-vault.yaml  vault.yaml  ws-shell.yaml  ws.yaml
saasexpress-tenants/src/bootstrap/ai/: ai-agent.yaml  ai-chatgpt.yaml  ai-function-clarify.yaml  ai-function-get-details.yaml  ai-function-tool.yaml
saasexpress-tenants/src/bootstrap/oauth/: metadata-discovery.yaml  oauth-callback.yaml  oauth-enforcer.yaml  oauth-session.yaml  oauth-signin.yaml  oauth-signout.yaml
saasexpress-tenants/src/bootstrap/playground/: callout-worker.yaml  claim_check.yaml  faker-intemp.yaml  faker.yaml  fanout.yaml  health-temp.yaml  health.yaml  hello.yaml  settings.yaml  shell-pwd.yaml  sse.yaml  timer-schedule.yaml  timer-start.yaml  twitter.yaml  ws-1.yaml  ws-2.yaml  ws-3.yaml  ws-shell.yaml  ws.yaml
saasexpress-tenants/src/bootstrap/refresh/: callout-work.yaml  callout.yaml
saasexpress-tenants/src/bootstrap/tenant_manager/: services-api-mut-create.yaml  tenant-api-get.yaml  tenant-api-mut-create.yaml  tenant-ui.yaml
saasexpress-tenants/src/bootstrap/vault/: vault.yaml
saasexpress-tenants/src/bootstrap_all/oauth/: metadata-discovery.yaml  oauth-callback.yaml  oauth-enforcer.yaml  oauth-session.yaml  oauth-signin.yaml  oauth-signout.yaml
saasexpress-tenants/src/bootstrap_all/playground/: callout-worker.yaml  callout.yaml  claim_check.yaml  claim_check_get.yaml  cookie.yaml  faker-intemp.yaml  faker.yaml  health-temp.yaml  health.yaml  hello-world.yaml  hello.yaml  message-translator.yaml  settings.yaml  shell.yaml  sse-source.yaml  sse-timer.yaml  sse.yaml  timer-schedule.yaml  timer-start.yaml  timer-vault.yaml  twitter.yaml  ws-1.yaml  ws-2.yaml  ws-3.yaml  ws-shell.yaml  ws.yaml
saasexpress-tenants/src/bootstrap_all/refresh/: callout-work.yaml  callout.yaml
saasexpress-tenants/src/bootstrap_all/tenant_manager/: activity-api-get.yaml  activity-api-mutation.yaml  services-api-get.yaml  services-api-mut-create.yaml  services-api-mutation.yaml  tenant-api-get.yaml  tenant-api-mut-create.yaml  tenant-api-mutation.yaml  tenant-root-ui-redirect.yaml  tenant-ui.yaml
saasexpress-tenants/src/bootstrap_all/vault/: vault.yaml
saasexpress-tenants/src/bootstrap_temp/ai/: ai-agent.yaml  ai-chatgpt.yaml  ai-claude.yaml  ai-function-clarify.yaml  ai-function-get-details.yaml  ai-function-search.yaml  tools.json
saasexpress-tenants/src/db/: mod.rs  service_repo.rs  tenant_repo.rs
saasexpress-tenants/src/models/: activity.rs  mod.rs  service.rs  tenant.rs
saasexpress-tenants/ui/: index.html
saasexpress-tenants/ui/assets/: index-DkcUuff4.js  index-XzffByct.css
src/: OPENTELEMETRY.md  bootstrap.rs  fs_watch.rs  lib.rs  main.rs  otlp-old.rs  otlp.rs  res.rs  telemetry.rs
static/: index.html
tenant-gateway/: Dockerfile  a.go  go.mod  go.sum
tenant-gateway-rs/: Cargo.toml  Dockerfile
tenant-ui/: .gitignore  Dockerfile  deno.json  (+7 more)
(+451 files in other folders)
