[package]
name = "saasexpress"
version = "0.1.1"
edition = "2024"
description = "A low-code enterprise integration framework for microservice orchestration"
license = "Apache-2.0"

[dependencies]
saasexpress-core = { path = "./saasexpress-core"}
saasexpress-faker = { path = "./src/operators/faker"}
async-nats = "0.38.0"
async-std = "1.13.0"
async-trait = "0.1.88"
axum = { version="0.8.3", features = ["macros", "ws"] }
axum-extra = {version = "0.10.1", features = ["typed-header"]}
cel-interpreter = "0.9.0"
chrono = "0.4.40"
clap = { version = "4.5.35", features = ["cargo"] }
dotenv = "0.15.0"
futures = "0.3.31"
futures-util = "0.3.31"
hyper = { version = "1.6.0", features = ["server"]}
log = "0.4"
opentelemetry = "0.28.0"
rand = "0.9.0"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
reqwest-websocket = "0.4.4"
rust-embed = "8.6.0"
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
serde_yaml = "0.9.34"
tokio = { version ="1.44.2", features = ["rt", "rt-multi-thread", "macros", "process"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.5", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3"
