[package]
name = "saasexpress-core"
version = "0.1.1"
edition = "2024"
description = "A low-code enterprise integration framework for microservice orchestration"
license = "Apache-2.0"

[dependencies]

# Traits containing async functions (dtolnay/async-trait)
async-trait = "0.1.88"

dotenv = "0.15.0"
futures = "0.3.31"
opentelemetry = "0.28.0"
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
serde_yaml = "0.9.34"
tokio = { version ="1.44.2", features = ["rt", "rt-multi-thread", "macros", "process", "io-util"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = "0.3"
