[package]
name = "saasexpress-core"
version = "0.1.1"
edition = "2024"
description = "A low-code enterprise integration framework for microservice orchestration"
license = "Apache-2.0"

[dependencies]

# Traits containing async functions (dtolnay/async-trait)
async-trait = "0.1.88"

# Serialization
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
serde_yaml = "0.9.34"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async
futures = "0.3.31"
tokio = { version ="1.44.2", features = ["rt", "rt-multi-thread", "macros", "process", "io-util"] }
tokio-stream = "0.1.17"

# Tracing
tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_info"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
fastrace = "0.7"

# Misc
dotenv = "0.15.0"
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "1.0"
once_cell = "1.21.3"
