[package]
name = "saasexpress-kube"
version = "0.1.1"
edition = "2024"
description = "A low-code enterprise integration framework for microservice orchestration"
license = "Apache-2.0"

[dependencies]
reqwest-eventsource = { path = "../reqwest-eventsource"}

tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = {version="0.9", features = []}
futures-util = "0.3"
base64 = "0.13"
dirs = "4.0"

# Kubernetes dependencies
kube = { version = "0.99.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }

futures = { version = "0.3.17", default-features = false }
tracing = "0.1.36"
tracing-subscriber = "0.3.17"
anyhow = "1.0.71"
