[package]
name = "saasexpress-tenants"
version = "0.1.0"
edition = "2024"
authors = ["SaaSExpress Team"]
description = "Multi-tenant capabilitity"

[dependencies]
# Web framework
axum = { version = "0.6.18", features = ["json", "macros", "multipart"] }
tower = "0.4"
tower-http = { version = "0.4.0", features = ["cors", "fs", "trace"] }
tokio = { version = "1", features = ["full"] }
hyper = "0.14.27"
http = "0.2.9"
http-body = "0.4.5"

# Database
diesel = { version = "2", features = ["sqlite", "chrono", "serde_json", "r2d2"] }
diesel_migrations = "2"
r2d2 = "0.8"
libsqlite3-sys = { version = "0.18", features = ["bundled"]}

# Serialization and data handling
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# OpenAPI / Swagger
utoipa = { version = "3", features = ["axum_extras", "yaml"] }
utoipa-swagger-ui = { version = "3", features = ["axum"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Misc
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
uuid = { version = "1", features = ["serde", "v4"] }
rand = "0.8"
async-trait = "0.1"
rust-embed = "6.8"
mime_guess = "2.0"
#static_files = "0.2"
# futures = "0.3"
# tera = "1"
# mime = "0.3"
# once_cell = "1"
# config = "0.13"


